// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`alignment: should be able to add alignment to headings 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "level": 1,
      },
      "content": Array [
        Object {
          "text": "hello",
          "type": "text",
        },
      ],
      "marks": Array [
        Object {
          "attrs": Object {
            "align": "center",
          },
          "type": "alignment",
        },
      ],
      "type": "heading",
    },
  ],
  "type": "doc",
}
`;

exports[`alignment: should be able to add alignment to paragraphs 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "hello",
          "type": "text",
        },
      ],
      "marks": Array [
        Object {
          "attrs": Object {
            "align": "center",
          },
          "type": "alignment",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`breakout: should be able to switch to wide mode 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "hello",
          "type": "text",
        },
      ],
      "marks": Array [
        Object {
          "attrs": Object {
            "align": "center",
          },
          "type": "alignment",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;
